--- a/client/src/css/Main.css
+++ b/client/src/css/Main.css
@@ -146,10 +146,14 @@ a:hover {
 }
 
 #timeRangeButtons {
-  font-weight: normal;
   background-color: rgba(255, 255, 255, 0.3);
   background: linear-gradient(60deg, rgba(180, 234, 255, 0.6), rgba(211, 255, 179, 0.6));
   border-radius: 0.5rem;
+}
+
+#timeRangeButtons button {
+  font-weight: normal;
+  font-size: 0.8rem;
 }
 
 #oneMonthButton {
